--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "mongodb":  ">= 0.9.3",
     "mongoose":  ">= 1.3.3",
-    "control":  ">= 0.1.7"
+    "control":  ">= 0.1.7",
+    "request":  ">= 1.9.5"
   },
   "engines":      { "node": ">= 0.4.8" }
 }
