--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version":      "0.0.1",
   "author":       "Paul Jensen <paulbjensen@gmail.com>",
   "dependencies": {
-    "mongodb":  ">= 0.9.3",
-    "mongoose":  ">= 2.1.3",
-    "control":  ">= 0.1.7",
-    "request":  ">= 1.9.5"
+    "mongodb":      ">= 0.9.3",
+    "mongoose":     ">= 2.1.3",
+    "control":      ">= 0.1.7",
+    "request":      ">= 1.9.5",
+    "socketstream": ">= 0.2.2"
   },
   "engines":      { "node": ">= 0.4.8" }
 }
